# Antboy-Gameboy-Emulator

./: CMakeLists.txt  LICENSE  README.md  build.bat
Assets/: settings.json
Assets/ROMs/: Flappy Bird Clone.gb  Wordle.gb
External Libraries/SFML-2.6.1/: license.md
Pseudocode/: class_designs.md  key_algorithms.md
Source/: gameboy.cpp  gameboy.hpp  main.cpp
Source/Hardware/: cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  joypad.cpp  joypad.hpp  lcd.cpp  lcd.hpp  log.cpp  mbc.cpp  mbc.hpp  mmu.cpp  mmu.hpp  ppu.cpp  ppu.hpp  timer.cpp  timer.hpp
Source/Opcodes/: alu_opcodes.cpp  alu_opcodes.hpp  bitmanip_opcodes.cpp  bitmanip_opcodes.hpp  func_opcodes.cpp  func_opcodes.hpp  jump_opcodes.cpp  jump_opcodes.hpp  load_opcodes.cpp  load_opcodes.hpp  misc_opcodes.cpp  misc_opcodes.hpp  opcodes_helper.cpp  opcodes_helper.hpp
Source/UI/: state_manager.cpp  state_manager.hpp
Source/UI/States/: color_picker_state.cpp  color_picker_state.hpp  controls_state.cpp  controls_state.hpp  display_settings_state.cpp  display_settings_state.hpp  emulation_state.cpp  emulation_state.hpp  general_settings_state.cpp  general_settings_state.hpp  input_select_state.cpp  input_select_state.hpp  insert_rom_state.cpp  insert_rom_state.hpp  main_menu_state.cpp  main_menu_state.hpp  modify_palette_state.cpp  modify_palette_state.hpp  palettes_state.cpp  palettes_state.hpp  paused_state.cpp  paused_state.hpp  remap_binds_state.cpp  remap_binds_state.hpp  settings_state.cpp  settings_state.hpp  state.cpp  state.hpp
Source/UI/UI Elements/: arrow_selector.cpp  arrow_selector.hpp  bind_remapper.cpp  bind_remapper.hpp  button.cpp  button.hpp  color_picker.cpp  color_picker.hpp  palette.cpp  palette.hpp  ui_element.cpp  ui_element.hpp
Source/Utilities/: misc.cpp  misc.hpp  renderer.cpp  renderer.hpp  vector.cpp  vector.hpp
